@@ -1,5 +1,16 @@
 2011-05-20  Ivan Maidanski  <ivmai@mail.ru>
 
+	* mark.c (alloc_mark_stack): Use FALSE/TRUE (instead of 0/1) for
+	boolean local variables.
+	* doc/README.macros (GC_PREFER_MPROTECT_VDB): Update.
+	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty,
+	GC_remove_protection): Define for GWW_VDB and PROC_VDB in a single
+	place.
+	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty): Compute
+	PHT_HASH(h) only once (store result to a local variable).
+
+2011-05-20  Ivan Maidanski  <ivmai@mail.ru>
+
 	* doc/README.solaris2: Update.
 
 2011-05-19  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)
